--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -107,7 +107,9 @@ android {
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
-
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation("com.squareup.okhttp3:okhttp-urlconnection:4.9.1")
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
